// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> component render 1`] = `
<a
  className="button"
  href="#"
  onClick={[Function]}
>
  
  
</a>
`;

exports[`<Board /> component render 2`] = `
<a
  className="button"
  href="#"
  onClick={[Function]}
>
  <em
    className="arrow-up"
  />
  
</a>
`;

exports[`<Board /> component render 3`] = `
<a
  className="button"
  href="#"
  onClick={[Function]}
>
  
  <span>
    test
  </span>
</a>
`;
